fix: Prevent horizontal overflow and content below footer on mobile

--- a/public/assets/scss/pages/_creative-agency.scss
+++ b/public/assets/scss/pages/_creative-agency.scss
@@ -30,9 +30,11 @@
         position: absolute;
         width: 100%;
         height: 100vh;
+        max-height: 100vh;
         top: 0;
         left: 0;
         z-index: -1;
+        overflow: hidden;
 
         img {
             width: 100%;
